0.4.0

- Rewrite platform dependable code to pure Perl
- Windows support
- Recourse mode support (strun)
- Outthentic_exit function to allow immediate exit through hook

0.3.17 2017-08-14

OS darwin is recognized by strun now.

0.3.15 2017-12-4

Fix for `allow use helpers in libraries` issue, for some reasons changes have not uploaded to CPAN


0.3.15 2017-10-26

Story libraries patch - https://github.com/melezhik/outthentic/pull/7 https://github.com/melezhik/outthentic/issues/5
Outthentic tests refactoring 

0.3.14 2017-10-17

Hot fix for fedora OS resolution bug (`_resolve_os` function )

0.3.13 2017-10-16

Replace `dump_os` by the code @Tyil introduced in https://github.com/melezhik/sparrowdo/pull/14
as result it should be POSIX compliant and cover more cases (OS)

0.3.12 2017-10-12

`Dump_os` - hide stderr

0.3.11 2017-10-12

Funtoo OS support

0.3.10 2017-10-11

`Dump_os` function - call `uname -o`

0.3.9 2017-09-07

Small adjustment for strun reports

0.3.8 2017-09-04

Production format: shows scripts stdout/stderr in case of errors.

0.3.7 2017-09-01

- support for production format
- sets format by using OUTTHENTIC_FORMAT variable
- merged PR from @lancew - https://github.com/melezhik/outthentic/pull/6 
  Misc small commits - Mainly Kritika.io violations #6 

0.3.6 2017-07-28

- Minor fixes of strun reports.


0.3.5 2017-07-25

- Fix bug when PERL5LIB does not include `$project_root_dir/lib` for Perl stories
- Strun now changes to CWD by default ( unless --cwd is set )

0.3.4 2017-07-14

- Free style command line arguments documentation
- Single dashes parameters support

0.3.3 2017-07-13

* Auto coercion use `--` instead of `-` for options and flags

0.3.2 2017-07-13

* Auto coercion of `args` in configuration file to `cli_args`

0.3.1 2017-07-11

- Support for experimental feature - pass command line arguments in free style by ` -- args args args ` in `plg run` and `task run` commands

0.3.0 2017-07-10
